# ddnet_ghostloader_c99

./: .gitignore  CMakeLists.txt  README.md  example.c  example_load.c  example_save.c  ghost.c  ghost.h  ghost_lib.c  ghost_lib.h  ghost_loader.c  ghost_loader.h  license.txt  makefile  run_dead_silence.gho  test.c
examples/: CMakeLists.txt
examples/load/: CMakeLists.txt  example_load.c
examples/save/: CMakeLists.txt  example_save.c
include/ddnet_ghost/: ghost.h
src/: ghost.c
tests/: CMakeLists.txt  test_match.c
